--- a/sesiones/sesion-02/index.html
+++ b/sesiones/sesion-02/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Sitio Web ECOTEC</title>
+  <title>Sitio Web ECOTEC!!</title>
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Sitio web académico de la Universidad ECOTEC">
@@ -11,16 +11,16 @@
   <link rel="icon" href="img/logo.png" type="image/png">
 
   <!-- CSS y JS se verán en próximas clases -->
-  <!-- <link rel="stylesheet" href="styles.css"> -->
+   <link rel="stylesheet" href="styles/styles.css"> 
   <!-- <script src="script.js"></script> -->
 </head>
 
 <body>
 
-<header>
+<header id="encabezado" >
   <h1>Universidad ECOTEC Test de prueba</h1>
 
-  <nav>
+  <nav class="menu" >
     <ul>
       <li><a href="index.html">Inicio</a></li>
       <li><a href="carreras.html">Carreras</a></li>
@@ -29,16 +29,26 @@
   </nav>
 </header>
 
-<main>
+<main  >
 
-  <section>
+  <section id="bienvenida" class="#contenedor1">
     <h2>Bienvenida</h2>
     <p>Este sitio fue creado por los estudiantes de Diseño de Sitios Web.</p>
   </section>
+   <br>
+   <div class="caja">
+
+    <h2>Noticias</h2>
+    <p>Noticias recientes sobre la universidad.</p>
+
+
+   </div>
+   <br>
+   <br>
 
   <section>
     <h2>Campus Universitario</h2>
-    <img src="img/banner01.jpg" alt="Campus universitario de ECOTEC" width="100%">
+    <img class="banner" src="img/banner01.jpg" alt="Campus universitario de ECOTEC" width="100%">
     <p>Formación académica de excelencia.</p>
   </section>
 
