validacion de form
validacion de formularios con JS

--- a/sesiones/Sesion-05/index.html
+++ b/sesiones/Sesion-05/index.html
@@ -20,7 +20,7 @@
         <input type="text" id="correo" placeholder="Correo">
         <br>
         <br>
-        <input type="text" id="password" placeholder="password">
+        <input type="text" id="password" placeholder="password"><small id="contadorPassword"></small>
         <br>
         <br>
         <input type="number" id="edad" placeholder="edad">
