--- a/sesiones/Sesion-06/index.html
+++ b/sesiones/Sesion-06/index.html
@@ -4,12 +4,13 @@
         <meta charset="UTF-8" />
         <title>Title</title>
         <link rel="stylesheet" href="styles.css" />
-        <script src="script.js"></script>
+      
     </head>
     <body>
-        <h1 class="title">Hello World</h1>
-        <div id="mainDiv">Hello Div</div>
-        <br />
-        <button onclick="buttonClicked()">Click me</button>
+      <h2>Persona</h2>
+        <button id="btn">Crear Persona</button>
+        <p id="resultado"></p>
+        
+          <script src="script.js"></script>
     </body>
 </html>
