muestra datos en tabla

--- a/sesiones/sesion-07/index.html
+++ b/sesiones/sesion-07/index.html
@@ -11,6 +11,18 @@
 
   <div id="resultado"></div>
   
+  <table id="tablaPersonas" border="1">
+    <thead>
+      <tr>
+        <th>Nombre</th>
+        <th>Email</th>
+        <th>Ciudad</th>
+        <th>Empresa</th>
+      </tr>
+    </thead>
+    <tbody></tbody>
+  </table>
+  
   
   
 
