--- a/sesiones/sesion-07/index.html
+++ b/sesiones/sesion-07/index.html
@@ -7,8 +7,12 @@
 <body>
 
   <h2>Usuarios desde API</h2>
+  <p id="total"></p>
   <button id="btnCargar">Cargar Usuarios </button>
+  
 
+  
+  
   <div id="resultado"></div>
   
   <table id="tablaPersonas" border="1">
