--- a/sesiones/sesion-08/index.html
+++ b/sesiones/sesion-08/index.html
@@ -19,8 +19,9 @@
     </div>
   </div>
   
-  <input type="text" id="buscar" class="form-control my-3" placeholder="Buscar por nombre">
-
+  <input type="text" id="buscar" class="form-control my-3" placeholder="Buscar por nombre o ciudad">
+ <button id="ordenarAZ" class="btn btn-sm btn-primary me-2">Ordenar de A-Z</button>
+  <button id="ordenarZA" class="btn btn-sm btn-primary me-2">Ordenar de Z-A</button>
   
  
   <div id="resultado"></div>
