--- a/sesiones/sesion-09/index.html
+++ b/sesiones/sesion-09/index.html
@@ -39,6 +39,12 @@
     <tbody></tbody>
   </table>
   
+  <div class="d-flex align-items-center gap-2">
+    <button id="prev" class="btn btn-sm btn-secondary" >Anterior</button>
+    <span id="pageInfo" class="small"></span>
+  <button id="next" class="btn btn-sm btn-secondary" >Siguiente</button>
+  </div>
+  
   
   
 
